--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
     "neo-async": "^2.6.2",
+    "netlify-cli": "^15.1.1",
     "node-releases": "^2.0.11",
     "normalize.css": "^8.0.1",
     "p-limit": "^2.3.0",
@@ -89,6 +90,7 @@
     "tapable": "^2.2.1",
     "terser": "^5.17.4",
     "terser-webpack-plugin": "^5.3.9",
+    "update": "^0.7.4",
     "update-browserslist-db": "^1.0.11",
     "uri-js": "^4.4.1",
     "watchpack": "^2.4.0",
