--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,6 @@
 # example netlify.toml
 [build]
-  command = "# no build command"
-  functions = "netlify/functions"
+  command = "yarn build"
   publish = ""
 
   ## Uncomment to use this redirect for Single Page Applications like create-react-app.
