--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,11 @@
 /dist
 /node_modules
-/test/js
-/test/browsertest/js
-/test/fixtures/temp-*
-/test/temp
-/test/ChangesAndRemovals
-/test/**/dev-defaults.webpack.lock
-/benchmark/js
-/benchmark/fixtures
-/examples/**/dist
-/assembly/**/*.wat
-/assembly/**/*.wasm
-/coverage
-/.nyc_output
-/.jest-cache
-.DS_Store
 *.log
 .idea
 .vscode
 .cache
-.eslintcache
 package-lock.json
+yarn.lock
 
 # Local Netlify folder
 .netlify
-dist/index.html
