--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 # example netlify.toml
 [build]
   command = "yarn build"
-  publish = ""
+  publish = "dist"
 
   ## Uncomment to use this redirect for Single Page Applications like create-react-app.
   ## Not needed for static site generators.
